hello2/hello2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello2
  name: hello2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello2
    spec:
      containers:
      - image: thanaphat1991/line-hello-2
        name: line-hello-2
