hello2/hello2-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello2
  namespace: hello2
spec:
  ingressClassName: nginx
  rules:
  - host: hello2.local
    http:
      paths:
      - backend:
          service:
            name: hello2
            port:
              number: 8000
        path: /
        pathType: Prefix
